Mon Nov 12 10:21:19 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h,unicode/tclUniData.cc: Update Unicode
	  character database to 6.2.0.
	* tests/api_unicode.cc: Add tests for U+20BA, added in 6.2.0.

Sat Nov 10 05:39:16 GMT 2012  Olly Betts <olly@survex.com>

	* api/leafpostlist.cc,matcher/multiandpostlist.cc: Improved fix for
	  #590 - count all matching LeafPostList objects with a Weight object
	  rather than trying to prune at the MultiAndPostList level based on
	  max_wt (if wdf is always zero for a term, BM25 gives max_wt of 0,
	  which leads to us never counting that subquery.
	* tests/api_percentages.cc: Add regression test topercent7.

Fri Nov 09 04:25:32 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_percentages.cc: Note bug number in regression test for
	  #590.

Tue Nov 06 22:42:31 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc: Restore two missing lines in database
	  checking where we report a block with the wrong level.

Tue Oct 16 11:19:42 GMT 2012  Olly Betts <olly@survex.com>

	* api/compactor.cc,backends/dbcheck.cc,backends/dbfactory.cc,
	  common/Makefile.mk: Fix to build when configured with
	  --disable-backend-brass --disable-backend-chert.  (ticket#586)

Mon Oct 15 04:07:30 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: automake 1.12.4 is now used to generate snapshots and
	  releases.

Sat Oct 13 09:34:21 GMT 2012  Olly Betts <olly@survex.com>

	* weight/weightinternal.h: Revert addition of "#include <config.h>" in
	  r16820.
	* HACKING: Document that we don't include <config.h> from header
	  files, and the reason why.

Sat Oct 13 09:00:23 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Fix documentation comment typos:
	  "covert" -> "convert".

Thu Oct 11 12:28:30 GMT 2012  Olly Betts <olly@survex.com>

	* docs/valueranges.rst: Update documentation to reflect change in
	  Xapian 1.1.2 - DateValueRangeProcessor and StringValueRangeProcessor