@@ -1,3 +1,9 @@
+Mon Nov 12 23:25:14 GMT 2012  Olly Betts <olly@survex.com>
+
+	* include/xapian/unicode.h: GCC 4.6.3 doesn't optimise the asr idion
+	  either.  Add links to the PR I filed and the GCC documentation that
+	  signed right shift does sign extension.
+
 Mon Nov 12 10:21:19 GMT 2012  Olly Betts <olly@survex.com>
 
 	* include/xapian/unicode.h,unicode/tclUniData.cc: Update Unicode
